--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -31,6 +31,8 @@
 	--font-weight-bold: 500;
 	--font-weight-bolder: 700;
 
+	--icon-size: 1rem;
+
 	--max-width-page: 56rem;
 	--min-height-textarea: 18rem;
 
