refactor: uncapitalize MSG and LOCALE in various files

--- a/src/components/app/home/LabelledOutput.astro
+++ b/src/components/app/home/LabelledOutput.astro
@@ -16,8 +16,8 @@ interface Props {
 
 const { id } = Astro.props;
 
-const MSG = getLocaleStrings(Astro).output;
-const label = MSG.map[id].label;
+const msg = getLocaleStrings(Astro).output;
+const label = msg.map[id].label;
 ---
 
 <Label {...wKey(id, 'label')}>
