feat: add getDefinedElementById utility function

--- a/src/components/app/home/CounterInput.astro
+++ b/src/components/app/home/CounterInput.astro
@@ -2,13 +2,10 @@
 import Textarea from '@components/ui/Textarea.astro';
 import { INPUT } from '@lib/config/input';
 import { getLocaleStrings } from '@lib/i18n/index.ts';
-import type { EmptyObject } from 'type-fest';
 
 /**
- * Props for the main counter input textarea.
+ * The main counter input textarea.
  */
-type Props = EmptyObject;
-
 const { label, placeholder } = getLocaleStrings(Astro).input;
 ---
 
@@ -23,14 +20,11 @@ const { label, placeholder } = getLocaleStrings(Astro).input;
 <script>
 	import { INPUT } from '@lib/config/input.ts';
 	import { $inputText } from '@stores/index.ts';
-	import { assertDefined, debounce } from '@utils/index.ts';
+	import { debounce, getDefinedElementById } from '@utils/index.ts';
 
 	const updateInputText = debounce(() => $inputText.set(input.value));
 
-	const input = assertDefined(
-		document.getElementById(INPUT.id) as HTMLTextAreaElement | null,
-		'input textarea',
-	);
+	const input = getDefinedElementById<HTMLTextAreaElement>(INPUT.id);
 
 	$inputText.subscribe((value, _oldValue) => {
 		input.value = value;
