--- a/src/components/app/Header.astro
+++ b/src/components/app/Header.astro
@@ -6,8 +6,14 @@ import { SITE } from '@lib/config/site.ts';
 import { getLocale, getLocaleStrings } from '@lib/i18n/index.ts';
 import type { HTMLAttributes } from 'astro/types';
 import { getRelativeLocaleUrl } from 'astro:i18n';
+import type { WithChildren } from '../../types.ts';
 
-type Props = HTMLAttributes<'header'>;
+/**
+ * Props for the site header with logo and description.
+ *
+ * Explicitly disallows children as header content is predefined.
+ */
+type Props = WithChildren<false, HTMLAttributes<'header'>>;
 
 const locale = getLocale(Astro);
 const msg = getLocaleStrings(locale);
