--- a/src/components/ui/Article.astro
+++ b/src/components/ui/Article.astro
@@ -4,13 +4,14 @@ import { getLocaleStrings } from '@lib/i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { CollectionEntry, CollectionKey } from 'astro:content';
 import { render } from 'astro:content';
+import type { WithChildren } from '../../types.ts';
 
 /**
  * Props for rendering a Markdown article from the content collection.
  *
  * @property entry - The content collection entry to render
  */
-interface Props {
+interface Props extends WithChildren<false> {
 	entry: CollectionEntry<CollectionKey>;
 }
 
