feat: various improvements to i18n implementation
- add utility function to get locale info programmatically
- add `wip` flag to locale config
- add region name and wip emoji to language display names
- temporarily remove es locale.
- rename instance of `locale` to `localeId`
- remove redundant `locale` key from messages file

--- a/src/components/app/Footer.astro
+++ b/src/components/app/Footer.astro
@@ -18,9 +18,9 @@ import ThemeSelector from './ThemeSelector.astro';
 type Props = WithChildren<false, HTMLAttributes<'footer'>>;
 
 const hasMultipleLocales = keysOf(LOCALE.map).length > 1;
-const locale = getLocale(Astro);
-const creditsEntry = assertDefined(await getEntry(locale, 'credits'));
-const privacyEntry = assertDefined(await getEntry(locale, 'privacy'));
+const currentLocaleId = getLocale(Astro);
+const creditsEntry = assertDefined(await getEntry(currentLocaleId, 'credits'));
+const privacyEntry = assertDefined(await getEntry(currentLocaleId, 'privacy'));
 
 const props = Astro.props;
 ---
