refactor: remove old styles from global CSS

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,305 +12,23 @@
 /* Base styles */
 /* ----------- */
 
-body {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	gap: var(--padding-base);
-	min-height: 100dvh;
-	margin: 0;
-	background-color: var(--color-base-1);
-	color: var(--color-text);
-	font-family: var(--font-family-base);
-	font-weight: var(--font-weight-base);
-	line-height: 1.5;
-
-	/* Generate additional colors from the provided theme colors */
-	--color-base-3: color-mix(
-		in oklch shorter hue,
-		var(--color-base-2),
-		var(--color-text) var(--color-mix-ratio-sm)
-	);
-	--color-selection: color-mix(
-		in oklch shorter hue,
-		var(--color-primary),
-		transparent var(--color-mix-ratio-base)
-	);
-	--color-shadow: color-mix(
-		in oklch shorter hue,
-		oklch(0 0 0 / 0.25) var(--shadow-strength),
-		transparent
-	);
-	--box-shadow-base: 0 1px 3px 0 var(--color-shadow), 0 1px 2px -1px
-		var(--color-shadow);
-	--box-shadow-inset-base: inset 0 2px 4px var(--color-shadow);
-	--text-shadow-base: 0px 1px 0px var(--color-shadow), 0px 1px 1px
-		var(--color-shadow), 0px 2px 2px var(--color-shadow);
-	--text-shadow-sm: 0px 1px 1px var(--color-shadow);
-	--drop-shadow-base: drop-shadow(0 1px .3px var(--color-shadow))
-		drop-shadow(0 1px .2px var(--color-shadow));
-}
-
-main {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	gap: var(--padding-lg);
-	flex: 1;
-	max-width: var(--max-width-page);
-	margin: var(--padding-base);
-
-	& > section {
-		display: flex;
-		flex-direction: column;
-		gap: var(--padding-base);
-	}
-}
-
-header,
-footer {
-	display: flex;
-	width: 100%;
-}
-
-header {
-	flex-direction: column;
-	align-items: center;
-	gap: var(--padding-base);
-	width: fit-content;
-	margin-block-start: var(--padding-lg);
-	margin-inline: var(--padding-base);
-
-	svg {
-		width: 10rem;
-		height: fit-content;
-		filter: var(--drop-shadow-base);
-	}
-}
-
-footer {
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: start;
-	gap: var(--padding-base);
-	flex-wrap: wrap;
-	box-sizing: border-box;
-	padding: var(--padding-lg);
-	background-color: var(--color-base-2);
-	box-shadow: var(--box-shadow-base);
-
-	& > * {
-		flex: 1;
-		flex-basis: 30%;
-	}
-}
-
-textarea {
-	min-height: var(--min-height-textarea);
-	max-height: var(--max-width-page);
-	border: none;
-	outline: none;
-	border-radius: var(--border-radius-base);
-	padding: var(--padding-base);
-	background-color: var(--color-base-2);
-	color: var(--color-text);
-	box-shadow: var(--box-shadow-base);
-	font-family: var(--font-family-base);
-	font-size: var(--font-size-base);
-	font-weight: var(--font-weight-base);
-	transition: background-color var(--transition-duration-base);
-	resize: block;
-
-	&:focus {
-		background-color: var(--color-base-3);
-	}
-
-	&::-webkit-scrollbar {
-		width: var(--padding-xs);
-	}
-
-	&::-webkit-scrollbar-thumb {
-		border-radius: var(--border-radius-base);
-		background-color: var(--color-text);
-		box-shadow: var(--box-shadow-base);
-		cursor: pointer;
-	}
-
-	&::placeholder {
-		color: color-mix(
-			in oklch shorter hue,
-			var(--color-text),
-			transparent var(--color-mix-ratio-base)
-		);
-	}
-}
-
-img {
-	max-width: 100%;
-	max-height: 100%;
-	height: auto;
-}
-
-svg {
-	width: var(--icon-size);
-	height: var(--icon-size);
-	stroke: var(--color-text);
-}
-
+h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
 	font-family: var(--font-family-header);
 }
 
-h4 {
-	display: inline;
-	margin: 0;
-	font-weight: var(--font-weight-bold);
-}
+* {
+	outline: var(--border-width-base) solid transparent;
 
-p {
-	margin: 0;
-	text-shadow: var(--text-shadow-sm);
-}
-
-ul {
-	margin-block-end: 0;
-}
-
-a {
-	text-decoration: none;
-
-	&:any-link:not(:has(svg)) {
-		padding-block-end: var(--border-width-base);
-		color: var(--color-primary);
-		transition-property: color, opacity;
-		transition-duration: var(--transition-duration-base);
-		border-block-end: var(--border-width-base) solid var(--color-primary);
-
-		&:has(img),
-		&:has(svg) {
-			border: none;
-		}
-	}
-
-	&:hover {
-		opacity: var(--opacity-hover);
-	}
-
-	&:active {
-		opacity: var(--opacity-max);
-	}
-
-	/* Class is needed here to forcefully increase specificity */
-	&:not(.enable-transitions) {
-		transition-property: background-color, color, opacity;
-		transition-duration: var(--transition-duration-base);
+	&:focus-visible {
+		outline-color: var(--color-primary);
 	}
 }
 
-form,
-nav {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	border-radius: var(--border-radius-base);
-	box-shadow: var(--box-shadow-base);
-	overflow: hidden;
-
-	&:hover > label {
-		&:has(> input) {
-			opacity: var(--opacity-hover);
-		}
-
-		&:has(> input:hover) {
-			opacity: var(--opacity-max);
-			box-shadow: var(--box-shadow-base);
-		}
-	}
-
-	label {
-		background: var(--color-base-1);
-	}
-
-	a {
-		background: var(--color-base-2);
-	}
-
-	label,
-	a {
-		--padding: var(--padding-sm);
-
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		align-items: center;
-		gap: var(--padding-xs);
-		flex-basis: calc(50% - 2 * var(--padding));
-		flex-grow: 1;
-		padding: var(--padding);
-		color: var(--color-text);
-		text-align: center;
-		white-space: nowrap;
-		cursor: pointer;
-
-		&:has(> input:active) {
-			opacity: var(--opacity-max);
-		}
-
-		&:has(> input[type='checkbox']:not(:checked)) {
-			box-shadow: var(--box-shadow-inset-base);
-		}
-
-		&:has(> input[type='checkbox'])::before {
-			content: '✗ ';
-		}
-
-		&:has(> input:checked) {
-			font-weight: var(--font-weight-bolder);
-			background: var(--color-base-3);
-			box-shadow: var(--box-shadow-base);
-			opacity: var(--opacity-max);
-			box-shadow: var(--box-shadow-base);
-			z-index: 1;
-
-			&::before {
-				content: '✓ ';
-				font-weight: var(--font-weight-bolder);
-			}
-		}
-
-		&:has(> output) {
-			flex-direction: column;
-			flex: 1;
-			padding: var(--padding-base);
-			background-color: var(--color-base-2);
-		}
-	}
-}
-
-input {
-	display: block;
-	margin: 0;
-	padding: 0;
-	width: 0;
-	height: 0;
-	opacity: var(--opacity-min);
-}
-
-output {
-	font-family: var(--font-family-header);
-	font-size: var(--font-size-lg);
-	font-weight: var(--font-weight-bold);
-}
-
-#themes > label {
-	background: linear-gradient(
-		90deg,
-		var(--color-base-1) 0%,
-		var(--color-base-1) 49.9%,
-		var(--color-base-2) 50.1%,
-		var(--color-base-2) 100%
-	);
+@view-transition {
+	navigation: auto;
 }
