--- a/src/components/app/home/CounterInput.astro
+++ b/src/components/app/home/CounterInput.astro
@@ -29,7 +29,7 @@ const { label, placeholder } = getLocaleStrings(Astro).input;
 
 	const input = getDefinedElementById<HTMLTextAreaElement>(INPUT.id);
 
-	$inputText.subscribe((value, _oldValue) => {
+	$inputText.subscribe((value) => {
 		input.value = value;
 	});
 
