--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -61,8 +61,10 @@ body {
 		oklch(0 0 0 / 0.25) var(--shadow-strength),
 		transparent
 	);
+	/* Shadows from Tailwind CSS 4 */
 	--box-shadow-base:
 		0 1px 3px 0 var(--color-shadow), 0 1px 2px -1px var(--color-shadow);
+	--box-shadow-lg: 0 20px 25px -5px var(--color-shadow), 0 8px 10px -6px var(--color-shadow);
 	--box-shadow-inset-base: inset 0 2px 4px var(--color-shadow);
 	--text-shadow-base:
 		0px 1px 0px var(--color-shadow), 0px 1px 1px var(--color-shadow),
