--- a/src/pages/[localeId]/preview/[type].astro
+++ b/src/pages/[localeId]/preview/[type].astro
@@ -1,12 +1,15 @@
 ---
 import SocialPreviewLayout from '@layouts/SocialPreviewLayout.astro';
 import { LOCALE } from '@lib/config/locale.ts';
+import { SOCIAL_PREVIEW } from '@lib/config/social-preview.ts';
 import { keysOf } from '@utils/index.ts';
 import { cartesianProduct } from 'radashi';
 
 export function getStaticPaths() {
-	// TODO: Move to config?
-	const paramMatrix = cartesianProduct(keysOf(LOCALE.map), ['og', 'twitter']);
+	const paramMatrix = cartesianProduct(
+		keysOf(LOCALE.map),
+		keysOf(SOCIAL_PREVIEW.map),
+	);
 
 	return paramMatrix.map(([localeId, type]) => ({
 		params: { localeId, type: type },
