--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -2,19 +2,15 @@
 import iconIco from '@images/favicon.ico';
 import iconPng from '@images/icon-solid.png';
 import iconSvg from '@images/icon.svg';
+import logoSvg from '@images/logo.svg';
 import { FONTS } from '@lib/config/fonts.ts';
 import { SITE } from '@lib/config/site';
 import { THEME } from '@lib/config/theme.ts';
 import { getLocale, getLocaleStrings } from '@lib/i18n/index.ts';
+import { pathToAbsoluteUrl } from '@utils/index.ts';
 import { Head as CapoHead } from 'astro-capo';
 import { Font, getImage } from 'astro:assets';
-
-const appleTouchIcon = await getImage({
-	src: iconPng,
-	format: 'png',
-	width: 180,
-	height: 180,
-});
+import SocialImageMetadata from './SocialImageMetadata.astro';
 
 /**
  * Props for the document head section.
@@ -24,6 +20,14 @@ const appleTouchIcon = await getImage({
 type Props = {
 	children?: astroHTML.JSX.Element;
 };
+
+const appleTouchIcon = await getImage({
+	src: iconPng,
+	format: 'png',
+	width: 180,
+	height: 180,
+	layout: 'none',
+});
 
 const currentLocaleId = getLocale(Astro);
 const msg = getLocaleStrings(currentLocaleId).site;
@@ -39,20 +43,38 @@ const msg = getLocaleStrings(currentLocaleId).site;
 	<meta name="description" content={msg.longDescription} />
 	<meta name="author" content={SITE.author.name.full} />
 
+	<!-- Open Graph tags -->
+	<meta property="og:title" content={msg.title} />
+	<meta property="og:description" content={msg.description} />
+	<meta property="og:url" content={SITE.url.base} />
+	<meta property="og:type" content="website" />
+	<meta property="og:locale" content={currentLocaleId} />
+	<!-- Unofficial tag -->
+	<meta property="og:logo" content={pathToAbsoluteUrl(logoSvg.src)} />
+
+	<!-- Twitter tags (some are omitted because X falls back to Open Graph tags) -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:creator" content={SITE.author.username.x} />
+
+	<SocialImageMetadata />
+
 	<meta name="msapplication-navbutton-color" content={THEME.default.color} />
 	<meta name="msapplication-TileColor" content={THEME.default.color} />
 	<meta name="theme-color" content={THEME.default.color} />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
+	<!-- Icons -->
 	<link rel="icon" sizes="48x48 32x32 24x24 16x16" href={iconIco} />
-	<link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} />
-	<link rel="icon" type="image/svg+xml" href={iconSvg.src} />
+	<link
+		rel="apple-touch-icon"
+		sizes={`${appleTouchIcon.options.width}x${appleTouchIcon.options.height}`}
+		href={appleTouchIcon.src}
+	/>
+	<link rel="icon" sizes="any" type="image/svg+xml" href={iconSvg.src} />
 
 	<link rel="sitemap" href={`/${SITE.sitemapPrefix}-index.xml`} />
 
-	<!-- TODO: Add manifest -->
-	<!-- <link rel="manifest" href="../site.webmanifest" /> -->
-
+	<!-- Fonts -->
 	{FONTS.map(({ cssVariable }) => <Font {cssVariable} preload />)}
 
 	<!-- JSON-LD WebApplication -->
